[editor] fix(plugin toolbar alignment): calculated max and min left of toolbar (#475)

--- a/examples/viewer-ssr/src/components/App/theme/global.theme.scss
+++ b/examples/viewer-ssr/src/components/App/theme/global.theme.scss
@@ -63,7 +63,7 @@
   .sizeFullWidth {
     &:not(.textWrapNowrap) {
       width: auto;
-      margin: 0 -100px;
+      margin: 0 -49px;
     }
   }
 }
